@@ -1,3 +1,8 @@
+2006-06-08  Paul Fitzpatrick  <paulfitz@localhost.localdomain>
+
+	* Making Bottle a better behaved recursive data structure (an
+	s-expression in disguise).
+
 2006-06-06  Paul Fitzpatrick  <paulfitz@localhost.localdomain>
 
 	* Added Port::setReaderCreator so users can have persistent
